# F1

./: .coverage  .coveragerc  .coveragerc.testsupport  .gitignore  .pre-commit-config.yaml  .pylintrc  ARCHITECTURE.md  DEBUG_DUMPS.md  DOMAIN_GLOSSARY.md  F1 Entries.xlsx  F1_circuits_scraper.py  F1_constructors_2025_scraper.py  F1_engine_manufacturers_scraper.py  F1_former_constructors_scraper.py  F1_grands_prix_scraper.py  F1_indianapolis_only_constructors_scraper.py  F1_indianapolis_only_engine_manufacturers_scraper.py  F1_list_scrapper.py  F1_privateer_teams_scraper.py  F1_scraper.py  F1_seasons_scraper.py  F1_table_scraper.py  RAPORT_REFAKTORYZACJI_2026.md  README.md  REFACTORING_SUMMARY.md  agents.md  benchmark_composite.py  benchmark_regex.py  benchmark_regex_cache.py  benchmark_year.py  benchmark_year_extractor.py  circuits_wins.py  codexa_tasks.txt  conftest.py  constructor_season_standings_plot.py  f1_engine_manufacturers.csv  f1_grands_prix_by_title.csv  f1_grands_prix_by_title.json  f1_indianapolis_only_constructors.csv  f1_indianapolis_only_engine_manufacturers.json  (+17 more)
.ci/: coverage-baseline.json  coverage-policy.json  legacy-low-coverage-files.txt
.github/: pull_request_template.md
.github/workflows/: architecture-tests.yml  main-run-data-guard.yml  module-typo-check.yml  pr-description-gate.yml  static-quality-gates.yml  test-profiles.yml  wiki-parser-contract.yml
artifacts/: coverage_top_remaining_misses.json  coverage_top_remaining_misses.md  test_coverage_top.json  test_coverage_top.md
complete_extractor/: __init__.py  base.py  domain_config.py
config/: README.md  __init__.py  app_config_provider.py
data/: ergast_loader.py
data/checkpoints/: checkpoint.example.json
data/mine/: engines_sponsorings.json  team_lineages.json
data/results/: circuits_wins.csv  races_standings.csv
data/wiki/: drivers.csv
docs/: ANALIZA_STRUKTURY_PODSUMOWANIE.md  CHANGES_CHECKLIST.md  CLI_FLAGS_POLICY.md  COVERAGE_QUALITY_POLICY.md  COVERAGE_WAVE_BACKLOG.md  COVERAGE_WAVE_BACKLOG.test.md  DEBUG_COOKBOOK.md  DEBUG_DUMPS.md  DEBUG_QUICKSTART.md  DEPENDENCY_INJECTION_SCRAPERS.md  DOMAIN_GLOSSARY.md  DUPLICATES_CI_ROLLOUT.md  ERROR_FIX_GUIDE.md  FUTURE_VISION_DATASET_PIPELINE.md  INDEX_DOKUMENTACJI_UML.md  LOCAL_PRECOMMIT_HOOKS.md  MIGRATION_NOTES_ALIAS_REMOVAL.md  MODULE_BOUNDARIES.md  PIPELINE_ERROR_CODES.md  PODSUMOWANIE_REFAKTORYZACJI.md  RAPORT_REFAKTORYZACJI_2026.md  README.md  REFACTORING_SUMMARY.md  ROADMAP_TASKS_DATASET_ML.md  TYPING_GUARDRAILS.md  UML_DIAGRAMS_README.md  UML_DIAGRAMS_README_PL.md  base_columns_review_rule.md  complete_extractor_base_rule.md  coverage_priority_plan.md  helpers_review_rule.md  helpers_use_case_map.md  normalization.md  pipeline_naming_rule.md  red_flagged_races_scraper_fix.md  scrapers-layer-architecture.md  uml_current_class_structure.puml  uml_current_process_flow.puml  uml_future_dataset_pipeline.puml  uml_proposed_class_structure.puml  (+2 more)
docs/adr/: 0000-template.md  0001-configuration-contract.md  0002-section-parser-contract.md  0003-di-strategy.md  0004-hook-naming-conventions.md  README.md
docs/architecture/: ARCHITECTURE_SPEC.md  dependency-directions.md  di-antipattern-rules.md  import-depth-policy.md  module-naming-standard.md  public-api-boundaries.md  scraper-extension-guide.md
f1_http/: __init__.py  interfaces.py  requests_shim.py
http_client/: base.py  caching.py  clients.py  interfaces.py  policies.py  rate_limiting.py  retry.py
infrastructure/: __init__.py
infrastructure/cache/: __init__.py  file_ttl_cache.py
infrastructure/export/: __init__.py  default_export_service.py
infrastructure/gemini/: README.md  __init__.py  cache.py  cache_service.py  client.py  constants.py  errors.py  (+8 more)
layers/: __init__.py  application.py  composition.py  constructors_mirror_service.py  facade.py  mirror_target_policy.py  path_resolver.py  pipeline.py  pipeline_workers.py  reporting.py  types.py
models/: __init__.py  base.py  circuit.py  constants.py  engine_manufacturer.py  records.py  scrape_types.py  serializers.py  validators.py  value_objects.py
pipeline/: orchestrator.py  step_registry.py
scrapers/: F1_scraper.py  F1_table_scraper.py  README.md  __init__.py  cli.py  config.py  data_paths.py  deprecation_catalog.py  domains.py
scripts/: check_architecture_rules.py  check_di_antipatterns.py  check_domain_terminology.py  check_known_module_typos.py  check_single_wiki_hook_names.py  diff_runs.py  migrate_configs_to_dsl.py  migrate_data_layout.py
tests/: _section_parser_fixture_pattern.py  bs4_stub.py  conftest.py  test_adr_enforcement_policy.py  test_adr_enforcement_policy_integration.py  test_app_config_provider.py  test_application_composition.py  test_architecture_duplicate_blocks.py  test_architecture_import_hygiene.py  test_architecture_import_rules.py  test_architecture_package_dependencies.py  test_architecture_registry_integrity.py  test_architecture_rules_consistency.py  test_architecture_spec_doc_sync.py  test_base_column_domain_boundaries.py  test_base_contracts.py  test_base_record_mappers.py  test_base_section_extraction_service.py  test_base_table_link_lookup_low_coverage.py  test_cache_adapter.py  test_cancelled_rounds_parser.py  test_check_known_module_typos.py  test_check_runner.py  test_check_scripts_smoke.py  test_ci_architecture_policy_meta.py  test_ci_marker_smoke.py  test_ci_quality_gates.py  test_ci_script_main_argv.py  test_ci_utilities.py  test_circuit_columns.py  test_circuit_infobox_text_utils_low_coverage.py  test_circuit_parsers.py  test_cli_bootstrap_boundaries.py  test_cli_deprecation_runtime.py  test_cli_entrypoints_contract.py  test_cli_legacy_profiles.py  test_cli_wiki_facade.py  test_common_value_objects_integration.py  test_complete_extractor_base.py  test_complete_extractor_namespace_contract.py  (+232 more)
tools/: run_scraper.py
validation/: composite_validator.py  domain_validator.py  issue.py  pipeline.py  quality_stats.py  record_factory_validator.py  record_validation.py  records.py  rule_engine.py  rules.py  schema_engine.py  schema_rules.py  schemas.py  validator_base.py
(+1636 files in other folders)
