[project]
name = "F1Scraper"
version = "0.1.0"
description = "F1Scraper"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "pandas>=2.0.0",
    "requests>=2.28.0",
    "certifi>=2022.12.0",
    "tqdm>=4.64.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = [
    "data/*",
]

[tool.ruff.lint]
select = [
  "F",
  "E",
  "W",
  "C90",
  "I",
  "N",
  "UP",
  "YTT",
  "ASYNC",
  "S",
  "BLE",
  "FBT",
  "B",
  "A",
  "COM",
  "C4",
  "DTZ",
  "T10",
  "DJ",
  "EM",
  "EXE",
  "FA",
  "ISC",
  "ICN",
  "G",
  "INP",
  "PIE",
  "T20",
  "PYI",
  "PT",
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SLOT",
  "SIM",
  "TID",
  "TCH",
  "INT",
  "ARG",
  "PTH",
  "ERA",
  "PD",
  "PGH",
  "PL",
  "TRY",
  "FLY",
  "NPY",
  "AIR",
  "PERF",
  "FURB",
  "LOG",
  "RUF",
]
ignore = [
  "T201",
  "S101", # Use of assert detected https://docs.astral.sh/ruff/rules/assert/
  "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
  "SIM102", # sometimes it's better to nest
  # EN DASH is intentional in Wikipedia scraper – used in data patterns and regex
  "RUF001",
  "RUF002",
  "RUF003",
  # Code complexity – requires significant refactoring
  "C901",
  "PLR0912",
  "PLR0911",
  # Lazy / conditional imports are an intentional pattern in this codebase
  "PLC0415",
  # Performance patterns that are intentional
  "PERF203",
  "PERF401",
  # Exception handling patterns that are intentional
  "TRY004",
  "TRY300",
  "BLE001",
  # Boolean positional args are an accepted design choice
  "FBT001",
  "FBT002",
  # Logging with f-strings is acceptable
  "G004",
  # Loop variable overwrite is intentional
  "PLW2901",
  # Datetime without timezone – scrapers work with naive dates
  "DTZ005",
  "DTZ007",
  # Security patterns acceptable for a web scraper
  "S310",
  "S311",
  "S105",
  "S107",
  # Commented-out code – kept intentionally
  "ERA001",
  # Naming conventions that differ from PEP 8 for compatibility
  "PLW0211",
  "N802",
  "N999",
  # N818: RequestException intentionally mirrors the requests library naming
  "N818",
  # Magic values are acceptable in domain-specific scraper code (F1 seasons, HTTP codes)
  "PLR2004",
  # SLF001: internal helper calls within same package hierarchy
  "SLF001",
  # Unused arguments – common in interface methods and hooks
  "ARG001",
  "ARG002",
  "ARG004",
  # COM812 conflicts with the ruff formatter
  "COM812",
  # Minor / unimportant
  "TC010",
  "TRY401",
  "A002",
  "B007",
  "E501",
  "UP038", # Checks for uses of isinstance/issubclass that take a tuple
          # of types for comparison.
          # Deactivated because it can make the code slow:
          # https://github.com/astral-sh/ruff/issues/7871
]
# The fixes in extend-unsafe-fixes will require
# provide the `--unsafe-fixes` flag when fixing.
extend-unsafe-fixes = [
    "UP007",
    "UP038",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "PLR2004",  # Magic values in test assertions are fine
  "SLF001",   # Tests need to access private members
  "ARG001",   # Unused function args in mock/stub functions
  "ARG002",   # Unused method args in mock/stub functions
  "ARG004",   # Unused static method args in mock/stub functions
  "N818",     # Test helper exceptions don't need the Error suffix
  "PT011",    # pytest.raises can be broad in unit tests
  "PT017",    # Exception assertion in except block is acceptable in tests
  "PT015",    # assert False is acceptable in test stubs
  "B011",     # assert False acceptable in test stubs
  "B017",     # pytest.raises(Exception) acceptable in tests
  "S108",     # Insecure temp file paths in tests are fine
  "TRY003",   # Long exception messages acceptable in test helpers
  "EM101",    # String literals in exceptions acceptable in test helpers
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pylint]
max-args = 10
max-positional-args = 5
