[project]
name = "F1Scraper"
version = "0.1.0"
description = "F1Scraper"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "pandas>=2.0.0",
    "requests>=2.28.0",
    "certifi>=2022.12.0",
    "tqdm>=4.64.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = [
    "data/*",
]

[tool.ruff.lint]
select = [
  "F",
  "E",
  "W",
  "C90",
  "I",
  "N",
  "UP",
  "YTT",
  "ASYNC",
  "S",
  "BLE",
  "FBT",
  "B",
  "A",
  "COM",
  "C4",
  "DTZ",
  "T10",
  "DJ",
  "EM",
  "EXE",
  "FA",
  "ISC",
  "ICN",
  "G",
  "INP",
  "PIE",
  "T20",
  "PYI",
  "PT",
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SLOT",
  "SIM",
  "TID",
  "TCH",
  "INT",
  "ARG",
  "PTH",
  "ERA",
  "PD",
  "PGH",
  "PL",
  "TRY",
  "FLY",
  "NPY",
  "AIR",
  "PERF",
  "LOG",
  "RUF",
]
ignore = [
  "T201",
  "S101", # Use of assert detected https://docs.astral.sh/ruff/rules/assert/
  "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
  "SIM102", # sometimes it's better to nest
]
[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pylint]
max-args = 10
max-positional-args = 5
max-branches = 12
max-statements = 50
max-nested-blocks = 4
